Added hello world controller to play with how views and controllers work together to display and manipulate data

--- a/MVCMovie/Views/HelloWorld/Index.cshtml
+++ b/MVCMovie/Views/HelloWorld/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Movie List";
 }
 
-<h2>Index</h2>
+<h2>My Movie List</h2>
 
-<p>Hello from our View Template!</p>
+<p>This is the view template being returned from the Index method in Hello World Controller. Default action if an action is not specified in the URL.</p>
