--- a/MVCMovie/Views/Shared/_Layout.cshtml
+++ b/MVCMovie/Views/Shared/_Layout.cshtml
@@ -23,7 +23,13 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Movies" asp-action="Index">All Movies</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="HelloWorld" asp-action="Index">Hello World Index</a>
                         </li>
                     </ul>
                 </div>
@@ -32,6 +38,7 @@
     </header>
     <div class="container">
         <main role="main" class="pb-3">
+            @*RenderBody method is a placeholder where all the view-specific pages created will show up wrapped in the shared layout. *@
             @RenderBody()
         </main>
     </div>
